--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <div class="container">
             <div class="header">
                
-                <a href="" class="logo">
-                    <img src="sign.jpg" alt="" class="signature">
-                    <!-- <i class="fa fa-bolt"></i> -->
+                <a href="https://pin.it/2jZ2BhCNp" class="logo">
+                    <!-- <img src="" alt="" class="signature">
+                    <i class="fa fa-bolt"></i> <rt>singh</rt> -->
+                    <rt> Rohit~singh</rt>
                 </a>
                    
                 <ul class="navbar">
